// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`API plugins should add mockbin API with a plugins 1`] = `
Array [
  Object {
    "type": "kong-info",
    "version": "___version___",
  },
  Object {
    "params": Object {
      "body": Object {
        "hosts": Array [
          "mockbin.com",
        ],
        "name": "mockbin",
        "upstream_url": "http://mockbin.com",
      },
      "endpoint": Object {
        "name": "apis",
      },
      "method": "POST",
      "type": "create-api",
    },
    "type": "request",
    "uri": "http://localhost:8001/apis",
  },
  Object {
    "content": Object {
      "created_at": "___created_at___",
      "hosts": Array [
        "mockbin.com",
      ],
      "http_if_terminated": false,
      "https_only": false,
      "id": "2b47ba9b-761a-492d-9a0c-000000000001",
      "name": "mockbin",
      "preserve_host": false,
      "retries": 5,
      "strip_uri": true,
      "upstream_connect_timeout": 60000,
      "upstream_read_timeout": 60000,
      "upstream_send_timeout": 60000,
      "upstream_url": "http://mockbin.com",
    },
    "ok": true,
    "params": Object {
      "body": Object {
        "hosts": Array [
          "mockbin.com",
        ],
        "name": "mockbin",
        "upstream_url": "http://mockbin.com",
      },
      "endpoint": Object {
        "name": "apis",
      },
      "method": "POST",
      "type": "create-api",
    },
    "status": 201,
    "statusText": "Created",
    "type": "response",
    "uri": "http://localhost:8001/apis",
  },
  Object {
    "params": Object {
      "body": Object {
        "config": Object {
          "key_names": Array [
            "foobar",
          ],
        },
        "name": "key-auth",
      },
      "endpoint": Object {
        "name": "api-plugins",
        "params": Object {
          "apiId": "2b47ba9b-761a-492d-9a0c-000000000001",
          "pluginName": "key-auth",
        },
      },
      "method": "POST",
      "type": "add-api-plugin",
    },
    "type": "request",
    "uri": "http://localhost:8001/apis/2b47ba9b-761a-492d-9a0c-000000000001/plugins",
  },
  Object {
    "content": Object {
      "api_id": "2b47ba9b-761a-492d-9a0c-000000000001",
      "config": Object {
        "anonymous": "",
        "hide_credentials": false,
        "key_in_body": false,
        "key_names": Array [
          "foobar",
        ],
        "run_on_preflight": true,
      },
      "created_at": "___created_at___",
      "enabled": true,
      "id": "2b47ba9b-761a-492d-9a0c-000000000002",
      "name": "key-auth",
    },
    "ok": true,
    "params": Object {
      "body": Object {
        "config": Object {
          "key_names": Array [
            "foobar",
          ],
        },
        "name": "key-auth",
      },
      "endpoint": Object {
        "name": "api-plugins",
        "params": Object {
          "apiId": "2b47ba9b-761a-492d-9a0c-000000000001",
          "pluginName": "key-auth",
        },
      },
      "method": "POST",
      "type": "add-api-plugin",
    },
    "status": 201,
    "statusText": "Created",
    "type": "response",
    "uri": "http://localhost:8001/apis/2b47ba9b-761a-492d-9a0c-000000000001/plugins",
  },
]
`;

exports[`API plugins should add mockbin API with a plugins 2`] = `
"apis:
  - name: mockbin
    plugins:
      - name: key-auth
        attributes:
          enabled: true
          config:
            key_names:
              - foobar
            key_in_body: false
            anonymous: ''
            run_on_preflight: true
            hide_credentials: false
    attributes:
      hosts:
        - mockbin.com
      strip_uri: true
      preserve_host: false
      upstream_url: 'http://mockbin.com'
      retries: 5
      upstream_connect_timeout: 60000
      upstream_read_timeout: 60000
      upstream_send_timeout: 60000
      https_only: false
      http_if_terminated: false
services: []
consumers: []
plugins: []
upstreams: []
certificates: []
"
`;

exports[`API plugins should remove mockbin api plugin 1`] = `
Array [
  Object {
    "type": "kong-info",
    "version": "___version___",
  },
  Object {
    "params": Object {
      "body": Object {
        "hosts": Array [
          "mockbin.com",
        ],
        "name": "mockbin",
        "upstream_url": "http://mockbin.com",
      },
      "endpoint": Object {
        "name": "apis",
      },
      "method": "POST",
      "type": "create-api",
    },
    "type": "request",
    "uri": "http://localhost:8001/apis",
  },
  Object {
    "content": Object {
      "created_at": "___created_at___",
      "hosts": Array [
        "mockbin.com",
      ],
      "http_if_terminated": false,
      "https_only": false,
      "id": "2b47ba9b-761a-492d-9a0c-000000000001",
      "name": "mockbin",
      "preserve_host": false,
      "retries": 5,
      "strip_uri": true,
      "upstream_connect_timeout": 60000,
      "upstream_read_timeout": 60000,
      "upstream_send_timeout": 60000,
      "upstream_url": "http://mockbin.com",
    },
    "ok": true,
    "params": Object {
      "body": Object {
        "hosts": Array [
          "mockbin.com",
        ],
        "name": "mockbin",
        "upstream_url": "http://mockbin.com",
      },
      "endpoint": Object {
        "name": "apis",
      },
      "method": "POST",
      "type": "create-api",
    },
    "status": 201,
    "statusText": "Created",
    "type": "response",
    "uri": "http://localhost:8001/apis",
  },
  Object {
    "params": Object {
      "body": Object {
        "config": Object {
          "key_names": Array [
            "foobar",
          ],
        },
        "name": "key-auth",
      },
      "endpoint": Object {
        "name": "api-plugins",
        "params": Object {
          "apiId": "2b47ba9b-761a-492d-9a0c-000000000001",
          "pluginName": "key-auth",
        },
      },
      "method": "POST",
      "type": "add-api-plugin",
    },
    "type": "request",
    "uri": "http://localhost:8001/apis/2b47ba9b-761a-492d-9a0c-000000000001/plugins",
  },
  Object {
    "content": Object {
      "api_id": "2b47ba9b-761a-492d-9a0c-000000000001",
      "config": Object {
        "anonymous": "",
        "hide_credentials": false,
        "key_in_body": false,
        "key_names": Array [
          "foobar",
        ],
        "run_on_preflight": true,
      },
      "created_at": "___created_at___",
      "enabled": true,
      "id": "2b47ba9b-761a-492d-9a0c-000000000002",
      "name": "key-auth",
    },
    "ok": true,
    "params": Object {
      "body": Object {
        "config": Object {
          "key_names": Array [
            "foobar",
          ],
        },
        "name": "key-auth",
      },
      "endpoint": Object {
        "name": "api-plugins",
        "params": Object {
          "apiId": "2b47ba9b-761a-492d-9a0c-000000000001",
          "pluginName": "key-auth",
        },
      },
      "method": "POST",
      "type": "add-api-plugin",
    },
    "status": 201,
    "statusText": "Created",
    "type": "response",
    "uri": "http://localhost:8001/apis/2b47ba9b-761a-492d-9a0c-000000000001/plugins",
  },
  Object {
    "type": "kong-info",
    "version": "___version___",
  },
  Object {
    "params": Object {
      "api": Object {
        "attributes": Object {
          "hosts": Array [
            "mockbin.com",
          ],
          "upstream_url": "http://mockbin.com",
        },
        "ensure": "present",
        "name": "mockbin",
        "plugins": Array [
          Object {
            "attributes": Object {
              "config": Object {
                "key_names": Array [
                  "foobar",
                ],
              },
            },
            "ensure": "removed",
            "name": "key-auth",
          },
        ],
      },
      "noop": true,
      "type": "noop-api",
    },
    "type": "noop",
  },
  Object {
    "params": Object {
      "endpoint": Object {
        "name": "api-plugin",
        "params": Object {
          "apiId": "2b47ba9b-761a-492d-9a0c-000000000001",
          "pluginId": "2b47ba9b-761a-492d-9a0c-000000000002",
        },
      },
      "method": "DELETE",
      "type": "remove-api-plugin",
    },
    "type": "request",
    "uri": "http://localhost:8001/apis/2b47ba9b-761a-492d-9a0c-000000000001/plugins/2b47ba9b-761a-492d-9a0c-000000000002",
  },
  Object {
    "content": "",
    "ok": true,
    "params": Object {
      "endpoint": Object {
        "name": "api-plugin",
        "params": Object {
          "apiId": "2b47ba9b-761a-492d-9a0c-000000000001",
          "pluginId": "2b47ba9b-761a-492d-9a0c-000000000002",
        },
      },
      "method": "DELETE",
      "type": "remove-api-plugin",
    },
    "status": 204,
    "statusText": "No Content",
    "type": "response",
    "uri": "http://localhost:8001/apis/2b47ba9b-761a-492d-9a0c-000000000001/plugins/2b47ba9b-761a-492d-9a0c-000000000002",
  },
]
`;

exports[`API plugins should remove mockbin api plugin 2`] = `
"apis:
  - name: mockbin
    plugins: []
    attributes:
      hosts:
        - mockbin.com
      strip_uri: true
      preserve_host: false
      upstream_url: 'http://mockbin.com'
      retries: 5
      upstream_connect_timeout: 60000
      upstream_read_timeout: 60000
      upstream_send_timeout: 60000
      https_only: false
      http_if_terminated: false
services: []
consumers: []
plugins: []
upstreams: []
certificates: []
"
`;

exports[`API plugins should update mockbin api plugin 1`] = `
Array [
  Object {
    "type": "kong-info",
    "version": "___version___",
  },
  Object {
    "params": Object {
      "body": Object {
        "hosts": Array [
          "mockbin.com",
        ],
        "name": "mockbin",
        "upstream_url": "http://mockbin.com",
      },
      "endpoint": Object {
        "name": "apis",
      },
      "method": "POST",
      "type": "create-api",
    },
    "type": "request",
    "uri": "http://localhost:8001/apis",
  },
  Object {
    "content": Object {
      "created_at": "___created_at___",
      "hosts": Array [
        "mockbin.com",
      ],
      "http_if_terminated": false,
      "https_only": false,
      "id": "2b47ba9b-761a-492d-9a0c-000000000001",
      "name": "mockbin",
      "preserve_host": false,
      "retries": 5,
      "strip_uri": true,
      "upstream_connect_timeout": 60000,
      "upstream_read_timeout": 60000,
      "upstream_send_timeout": 60000,
      "upstream_url": "http://mockbin.com",
    },
    "ok": true,
    "params": Object {
      "body": Object {
        "hosts": Array [
          "mockbin.com",
        ],
        "name": "mockbin",
        "upstream_url": "http://mockbin.com",
      },
      "endpoint": Object {
        "name": "apis",
      },
      "method": "POST",
      "type": "create-api",
    },
    "status": 201,
    "statusText": "Created",
    "type": "response",
    "uri": "http://localhost:8001/apis",
  },
  Object {
    "params": Object {
      "body": Object {
        "config": Object {
          "key_names": Array [
            "foobar",
          ],
        },
        "name": "key-auth",
      },
      "endpoint": Object {
        "name": "api-plugins",
        "params": Object {
          "apiId": "2b47ba9b-761a-492d-9a0c-000000000001",
          "pluginName": "key-auth",
        },
      },
      "method": "POST",
      "type": "add-api-plugin",
    },
    "type": "request",
    "uri": "http://localhost:8001/apis/2b47ba9b-761a-492d-9a0c-000000000001/plugins",
  },
  Object {
    "content": Object {
      "api_id": "2b47ba9b-761a-492d-9a0c-000000000001",
      "config": Object {
        "anonymous": "",
        "hide_credentials": false,
        "key_in_body": false,
        "key_names": Array [
          "foobar",
        ],
        "run_on_preflight": true,
      },
      "created_at": "___created_at___",
      "enabled": true,
      "id": "2b47ba9b-761a-492d-9a0c-000000000002",
      "name": "key-auth",
    },
    "ok": true,
    "params": Object {
      "body": Object {
        "config": Object {
          "key_names": Array [
            "foobar",
          ],
        },
        "name": "key-auth",
      },
      "endpoint": Object {
        "name": "api-plugins",
        "params": Object {
          "apiId": "2b47ba9b-761a-492d-9a0c-000000000001",
          "pluginName": "key-auth",
        },
      },
      "method": "POST",
      "type": "add-api-plugin",
    },
    "status": 201,
    "statusText": "Created",
    "type": "response",
    "uri": "http://localhost:8001/apis/2b47ba9b-761a-492d-9a0c-000000000001/plugins",
  },
  Object {
    "type": "kong-info",
    "version": "___version___",
  },
  Object {
    "params": Object {
      "api": Object {
        "attributes": Object {
          "hosts": Array [
            "mockbin.com",
          ],
          "upstream_url": "http://mockbin.com",
        },
        "ensure": "present",
        "name": "mockbin",
        "plugins": Array [
          Object {
            "attributes": Object {
              "config": Object {
                "key_names": Array [
                  "foobar",
                ],
              },
              "enabled": false,
            },
            "name": "key-auth",
          },
        ],
      },
      "noop": true,
      "type": "noop-api",
    },
    "type": "noop",
  },
  Object {
    "params": Object {
      "body": Object {
        "config": Object {
          "key_names": Array [
            "foobar",
          ],
        },
        "enabled": false,
      },
      "endpoint": Object {
        "name": "api-plugin",
        "params": Object {
          "apiId": "2b47ba9b-761a-492d-9a0c-000000000001",
          "pluginId": "2b47ba9b-761a-492d-9a0c-000000000002",
        },
      },
      "method": "PATCH",
      "type": "update-api-plugin",
    },
    "type": "request",
    "uri": "http://localhost:8001/apis/2b47ba9b-761a-492d-9a0c-000000000001/plugins/2b47ba9b-761a-492d-9a0c-000000000002",
  },
  Object {
    "content": Object {
      "api_id": "2b47ba9b-761a-492d-9a0c-000000000001",
      "config": Object {
        "anonymous": "",
        "hide_credentials": false,
        "key_in_body": false,
        "key_names": Array [
          "foobar",
        ],
        "run_on_preflight": true,
      },
      "created_at": "___created_at___",
      "enabled": false,
      "id": "2b47ba9b-761a-492d-9a0c-000000000002",
      "name": "key-auth",
    },
    "ok": true,
    "params": Object {
      "body": Object {
        "config": Object {
          "key_names": Array [
            "foobar",
          ],
        },
        "enabled": false,
      },
      "endpoint": Object {
        "name": "api-plugin",
        "params": Object {
          "apiId": "2b47ba9b-761a-492d-9a0c-000000000001",
          "pluginId": "2b47ba9b-761a-492d-9a0c-000000000002",
        },
      },
      "method": "PATCH",
      "type": "update-api-plugin",
    },
    "status": 200,
    "statusText": "OK",
    "type": "response",
    "uri": "http://localhost:8001/apis/2b47ba9b-761a-492d-9a0c-000000000001/plugins/2b47ba9b-761a-492d-9a0c-000000000002",
  },
]
`;

exports[`API plugins should update mockbin api plugin 2`] = `
"apis:
  - name: mockbin
    plugins:
      - name: key-auth
        attributes:
          enabled: false
          config:
            key_names:
              - foobar
            key_in_body: false
            anonymous: ''
            run_on_preflight: true
            hide_credentials: false
    attributes:
      hosts:
        - mockbin.com
      strip_uri: true
      preserve_host: false
      upstream_url: 'http://mockbin.com'
      retries: 5
      upstream_connect_timeout: 60000
      upstream_read_timeout: 60000
      upstream_send_timeout: 60000
      https_only: false
      http_if_terminated: false
services: []
consumers: []
plugins: []
upstreams: []
certificates: []
"
`;

exports[`API should add the API 1`] = `
Array [
  Object {
    "type": "kong-info",
    "version": "___version___",
  },
  Object {
    "params": Object {
      "body": Object {
        "hosts": Array [
          "mockbin.com",
        ],
        "name": "mockbin",
        "upstream_url": "http://mockbin.com",
      },
      "endpoint": Object {
        "name": "apis",
      },
      "method": "POST",
      "type": "create-api",
    },
    "type": "request",
    "uri": "http://localhost:8001/apis",
  },
  Object {
    "content": Object {
      "created_at": "___created_at___",
      "hosts": Array [
        "mockbin.com",
      ],
      "http_if_terminated": false,
      "https_only": false,
      "id": "2b47ba9b-761a-492d-9a0c-000000000001",
      "name": "mockbin",
      "preserve_host": false,
      "retries": 5,
      "strip_uri": true,
      "upstream_connect_timeout": 60000,
      "upstream_read_timeout": 60000,
      "upstream_send_timeout": 60000,
      "upstream_url": "http://mockbin.com",
    },
    "ok": true,
    "params": Object {
      "body": Object {
        "hosts": Array [
          "mockbin.com",
        ],
        "name": "mockbin",
        "upstream_url": "http://mockbin.com",
      },
      "endpoint": Object {
        "name": "apis",
      },
      "method": "POST",
      "type": "create-api",
    },
    "status": 201,
    "statusText": "Created",
    "type": "response",
    "uri": "http://localhost:8001/apis",
  },
]
`;

exports[`API should add the API 2`] = `
"apis:
  - name: mockbin
    plugins: []
    attributes:
      hosts:
        - mockbin.com
      strip_uri: true
      preserve_host: false
      upstream_url: 'http://mockbin.com'
      retries: 5
      upstream_connect_timeout: 60000
      upstream_read_timeout: 60000
      upstream_send_timeout: 60000
      https_only: false
      http_if_terminated: false
services: []
consumers: []
plugins: []
upstreams: []
certificates: []
"
`;

exports[`API should not update if already up to date 1`] = `
Array [
  Object {
    "type": "kong-info",
    "version": "___version___",
  },
  Object {
    "params": Object {
      "body": Object {
        "hosts": Array [
          "mockbin.com",
        ],
        "name": "mockbin",
        "upstream_url": "http://mockbin.com",
      },
      "endpoint": Object {
        "name": "apis",
      },
      "method": "POST",
      "type": "create-api",
    },
    "type": "request",
    "uri": "http://localhost:8001/apis",
  },
  Object {
    "content": Object {
      "created_at": "___created_at___",
      "hosts": Array [
        "mockbin.com",
      ],
      "http_if_terminated": false,
      "https_only": false,
      "id": "2b47ba9b-761a-492d-9a0c-000000000001",
      "name": "mockbin",
      "preserve_host": false,
      "retries": 5,
      "strip_uri": true,
      "upstream_connect_timeout": 60000,
      "upstream_read_timeout": 60000,
      "upstream_send_timeout": 60000,
      "upstream_url": "http://mockbin.com",
    },
    "ok": true,
    "params": Object {
      "body": Object {
        "hosts": Array [
          "mockbin.com",
        ],
        "name": "mockbin",
        "upstream_url": "http://mockbin.com",
      },
      "endpoint": Object {
        "name": "apis",
      },
      "method": "POST",
      "type": "create-api",
    },
    "status": 201,
    "statusText": "Created",
    "type": "response",
    "uri": "http://localhost:8001/apis",
  },
  Object {
    "type": "kong-info",
    "version": "___version___",
  },
  Object {
    "params": Object {
      "api": Object {
        "attributes": Object {
          "hosts": Array [
            "mockbin.com",
          ],
          "upstream_url": "http://mockbin.com",
        },
        "ensure": "present",
        "name": "mockbin",
      },
      "noop": true,
      "type": "noop-api",
    },
    "type": "noop",
  },
]
`;

exports[`API should not update if already up to date 2`] = `
"apis:
  - name: mockbin
    plugins: []
    attributes:
      hosts:
        - mockbin.com
      strip_uri: true
      preserve_host: false
      upstream_url: 'http://mockbin.com'
      retries: 5
      upstream_connect_timeout: 60000
      upstream_read_timeout: 60000
      upstream_send_timeout: 60000
      https_only: false
      http_if_terminated: false
services: []
consumers: []
plugins: []
upstreams: []
certificates: []
"
`;

exports[`API should remove the api 1`] = `
Array [
  Object {
    "type": "kong-info",
    "version": "___version___",
  },
  Object {
    "params": Object {
      "body": Object {
        "hosts": Array [
          "mockbin.com",
        ],
        "name": "mockbin",
        "upstream_url": "http://mockbin.com",
      },
      "endpoint": Object {
        "name": "apis",
      },
      "method": "POST",
      "type": "create-api",
    },
    "type": "request",
    "uri": "http://localhost:8001/apis",
  },
  Object {
    "content": Object {
      "created_at": "___created_at___",
      "hosts": Array [
        "mockbin.com",
      ],
      "http_if_terminated": false,
      "https_only": false,
      "id": "2b47ba9b-761a-492d-9a0c-000000000001",
      "name": "mockbin",
      "preserve_host": false,
      "retries": 5,
      "strip_uri": true,
      "upstream_connect_timeout": 60000,
      "upstream_read_timeout": 60000,
      "upstream_send_timeout": 60000,
      "upstream_url": "http://mockbin.com",
    },
    "ok": true,
    "params": Object {
      "body": Object {
        "hosts": Array [
          "mockbin.com",
        ],
        "name": "mockbin",
        "upstream_url": "http://mockbin.com",
      },
      "endpoint": Object {
        "name": "apis",
      },
      "method": "POST",
      "type": "create-api",
    },
    "status": 201,
    "statusText": "Created",
    "type": "response",
    "uri": "http://localhost:8001/apis",
  },
  Object {
    "type": "kong-info",
    "version": "___version___",
  },
  Object {
    "params": Object {
      "endpoint": Object {
        "name": "api",
        "params": Object {
          "name": "mockbin",
        },
      },
      "method": "DELETE",
      "type": "remove-api",
    },
    "type": "request",
    "uri": "http://localhost:8001/apis/mockbin",
  },
  Object {
    "content": "",
    "ok": true,
    "params": Object {
      "endpoint": Object {
        "name": "api",
        "params": Object {
          "name": "mockbin",
        },
      },
      "method": "DELETE",
      "type": "remove-api",
    },
    "status": 204,
    "statusText": "No Content",
    "type": "response",
    "uri": "http://localhost:8001/apis/mockbin",
  },
]
`;

exports[`API should remove the api 2`] = `
"apis: []
services: []
consumers: []
plugins: []
upstreams: []
certificates: []
"
`;

exports[`API should update the api 1`] = `
Array [
  Object {
    "type": "kong-info",
    "version": "___version___",
  },
  Object {
    "params": Object {
      "body": Object {
        "hosts": Array [
          "mockbin.com",
        ],
        "name": "mockbin",
        "upstream_url": "http://mockbin.com",
      },
      "endpoint": Object {
        "name": "apis",
      },
      "method": "POST",
      "type": "create-api",
    },
    "type": "request",
    "uri": "http://localhost:8001/apis",
  },
  Object {
    "content": Object {
      "created_at": "___created_at___",
      "hosts": Array [
        "mockbin.com",
      ],
      "http_if_terminated": false,
      "https_only": false,
      "id": "2b47ba9b-761a-492d-9a0c-000000000001",
      "name": "mockbin",
      "preserve_host": false,
      "retries": 5,
      "strip_uri": true,
      "upstream_connect_timeout": 60000,
      "upstream_read_timeout": 60000,
      "upstream_send_timeout": 60000,
      "upstream_url": "http://mockbin.com",
    },
    "ok": true,
    "params": Object {
      "body": Object {
        "hosts": Array [
          "mockbin.com",
        ],
        "name": "mockbin",
        "upstream_url": "http://mockbin.com",
      },
      "endpoint": Object {
        "name": "apis",
      },
      "method": "POST",
      "type": "create-api",
    },
    "status": 201,
    "statusText": "Created",
    "type": "response",
    "uri": "http://localhost:8001/apis",
  },
  Object {
    "type": "kong-info",
    "version": "___version___",
  },
  Object {
    "params": Object {
      "body": Object {
        "hosts": Array [
          "mockbin.com",
        ],
        "preserve_host": true,
        "upstream_url": "http://mockbin.com",
      },
      "endpoint": Object {
        "name": "api",
        "params": Object {
          "name": "mockbin",
        },
      },
      "method": "PATCH",
      "type": "update-api",
    },
    "type": "request",
    "uri": "http://localhost:8001/apis/mockbin",
  },
  Object {
    "content": Object {
      "created_at": "___created_at___",
      "hosts": Array [
        "mockbin.com",
      ],
      "http_if_terminated": false,
      "https_only": false,
      "id": "2b47ba9b-761a-492d-9a0c-000000000001",
      "name": "mockbin",
      "preserve_host": true,
      "retries": 5,
      "strip_uri": true,
      "upstream_connect_timeout": 60000,
      "upstream_read_timeout": 60000,
      "upstream_send_timeout": 60000,
      "upstream_url": "http://mockbin.com",
    },
    "ok": true,
    "params": Object {
      "body": Object {
        "hosts": Array [
          "mockbin.com",
        ],
        "preserve_host": true,
        "upstream_url": "http://mockbin.com",
      },
      "endpoint": Object {
        "name": "api",
        "params": Object {
          "name": "mockbin",
        },
      },
      "method": "PATCH",
      "type": "update-api",
    },
    "status": 200,
    "statusText": "OK",
    "type": "response",
    "uri": "http://localhost:8001/apis/mockbin",
  },
]
`;

exports[`API should update the api 2`] = `
"apis:
  - name: mockbin
    plugins: []
    attributes:
      hosts:
        - mockbin.com
      strip_uri: true
      preserve_host: true
      upstream_url: 'http://mockbin.com'
      retries: 5
      upstream_connect_timeout: 60000
      upstream_read_timeout: 60000
      upstream_send_timeout: 60000
      https_only: false
      http_if_terminated: false
services: []
consumers: []
plugins: []
upstreams: []
certificates: []
"
`;
